deploy/drachtio-stage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siprec-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siprec-stage
  template:
    metadata:
      labels:
        app: siprec-stage
    spec:
      imagePullSecrets:
      - name: ocir-pull-secret
      containers:
      # 1. Drachtio Server (Signaling)
      - name: drachtio-server
        image: docker.io/drachtio/drachtio-server:latest
        args: ["drachtio", "--contact", "sip:*;transport=tcp,udp", "--loglevel", "info"]
        # args: ["drachtio", "--contact", "sips:*;transport=tls", "--loglevel", "info"]
        ports:
        - containerPort: 5060
          protocol: TCP
      - name: drachtio-srs
        image:  sin.ocir.io/ax2doumptkcp/drachtio-srs:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: config-volume
          mountPath: /usr/src/app/config/local.json
          subPath: local.json
      - name: redis
        image: docker.io/redis:alpine
        ports:
        - containerPort: 6379

      volumes:
      - name: config-volume
        configMap:
          name: srs-config-stage

---
apiVersion: v1
kind: Service
metadata:
  name: siprec-stage
spec:
  selector:
    app: siprec-stage
  ports:
    - name: srs-tcp-stage
      protocol: TCP
      port: 20003
      targetPort: 5060
    - name: srs-udp-devel
      protocol: UDP
      port: 20003
      targetPort: 5060
  type: ClusterIP
