deploy/srs-tcp-devel-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: srs-tcp-devel
  namespace: talk
spec:
  entryPoints:
    - srs-tcp-devel
  routes:
    - match: HostSNI(`*`)
      services:
        - name: siprec-devel
          port: 20002
