deploy/srs-tcp-ibratro-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: srs-tcp-ibratro
  namespace: talk
spec:
  entryPoints:
    - srs-tcp-ibratro
  routes:
    - match: HostSNI(`*`)
      services:
        - name: siprec-ibratro
          port: 20001
