deploy/srs-tcp-neonet-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: srs-tcp-neonet
  namespace: talk
spec:
  entryPoints:
    - srs-tcp-neonet
  routes:
    - match: HostSNI(`*`)
      services:
        - name: siprec-neonet
          port: 20004
