deploy/srs-tcp-stage-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: srs-tcp-stage
  namespace: talk
spec:
  entryPoints:
    - srs-tcp-stage
  routes:
    - match: HostSNI(`*`)
      services:
        - name: siprec-stage
          port: 20003
